<?xml version="1.0"?>
<package format="3">
<name>cartesian_msgs</name>
  <version>2.3.1</version>
  <description>Cartesian interface messages and action definitions</description>
  <maintainer email="tylermarr17@gmail.com">ros-industrial</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
